--- a/css/main.css
+++ b/css/main.css
@@ -1998,7 +1998,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #830eff;
+  background: #784187;
 }
 .links-of-blogroll {
   font-size: 13px;
@@ -3002,4 +3002,8 @@ code {
   color: #c7254e;
   background-color: #f9f2f4;
   border-radius: 3px;
+}
+.post-body a {
+  color: #3084bb;
+  border-bottom: 1px solid #68c3ff;
 }
